--- a/style.css
+++ b/style.css
@@ -95,8 +95,8 @@ h2 {
     /* flex-direction: column; */
     justify-content: center;
     align-items: center;
-    margin-top: 160px;
-    margin-bottom: 160px;
+    padding-top: 160px;
+    padding-bottom: 160px;
 }
 
 .content {
